stream-c/week-1/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coder
  labels:
    name: coder
